--- a/enssel/src/main/resources/static/css/footer.scss
+++ b/enssel/src/main/resources/static/css/footer.scss
@@ -23,6 +23,7 @@ footer {
 
 
     .enssel-footer-menu {
+      width: 270px;
       display: flex;
       padding: 1vh;
       flex-direction: column;
