--- a/enssel/src/main/resources/templates/fragments/configHead.html
+++ b/enssel/src/main/resources/templates/fragments/configHead.html
@@ -24,12 +24,12 @@
     <link rel="stylesheet" th:href="@{/css/section.css}">
     <link rel="stylesheet" th:href="@{/css/footer.css}">
 
-    <!--PAGE CSS-->
+    <!--INTRODUCE CSS-->
     <link rel="stylesheet" th:href="@{/css/introduce.css}">
-    <link rel="stylesheet" th:href="@{/css/contact.css}">
 
-    <!--COMMON JS-->
-    <script th:src="@{/js/common.js}"></script>
+    <!--CONTACT CSS-->
+    <link rel="stylesheet" th:href="@{/css/contact/contact.css}">
+    <link rel="stylesheet" th:href="@{/css/contact/inquiry.css}">
 </head>
 
 </html>
