--- a/enssel/src/main/resources/static/css/common.css
+++ b/enssel/src/main/resources/static/css/common.css
@@ -20,13 +20,170 @@ h1, h2, h3, h4, h5, h6 {
   overflow: hidden;
 }
 
+ul, li {
+  list-style-type: none;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+input, textarea {
+  outline: none;
+  resize: none;
+  border: 1px solid #142482;
+  border-radius: 5px;
+  padding: 0.2rem;
+  width: 100%;
+}
+
+input:focus, textarea:focus {
+  box-shadow: rgba(120, 150, 255, 0.7) 0px 0px 7px 3px;
+}
+
 .enssel-title {
   margin: 5rem 0;
 }
 
-ul, li {
-  list-style-type: none;
-  overflow: hidden;
+.enssel-page-layout {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  padding-top: 7vh;
+}
+
+.enssel-page-image {
+  width: 100%;
+  height: 100vh;
+  background-image: url("https://via.placeholder.com/1920x920/000000/111111");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0 5rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: center;
+}
+.enssel-page-image > h1 {
+  color: white;
+  font-weight: 900;
+  font-size: 3rem;
+}
+.enssel-page-image > h2 {
+  color: white;
+  font-weight: 450;
+  font-size: 1.5rem;
+}
+
+.enssel-contents {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  margin: 3rem 15rem;
+}
+.enssel-contents .enssel-page-title {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+.enssel-contents .enssel-page-title > span {
+  width: 100%;
+  height: 3px;
+  background-color: #142482;
+}
+.enssel-contents .enssel-page-title > h1 {
+  font-weight: 900;
+  color: #142482;
+  margin: 20px 0 20px 10px;
+}
+.enssel-contents .enssel-hr-line {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  margin: 5rem 0;
+}
+.enssel-contents .enssel-hr-line > h2 {
+  color: #142482;
+  margin: 20px 0 20px 10px;
+}
+.enssel-contents .enssel-hr-line > hr {
+  margin: 0.5rem 0;
+  color: inherit;
+  border: 0;
+  border-top: 3px solid #142482;
+  opacity: 1;
+}
+
+@media (max-width: 1020px) {
+  .enssel-page-layout {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    padding-top: 14vh;
+  }
+  .enssel-page-image {
+    width: 100%;
+    height: 60vh;
+    background-image: url("https://via.placeholder.com/1920x920/000000/111111");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 0 3rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  .enssel-page-image > h1 {
+    color: white;
+    font-weight: 900;
+    font-size: 2.4rem;
+  }
+  .enssel-page-image > h2 {
+    color: white;
+    font-weight: 450;
+    font-size: 1.2rem;
+  }
+  .enssel-contents {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    margin: 3rem 3rem;
+  }
+  .enssel-contents .enssel-page-title {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .enssel-contents .enssel-page-title > span {
+    width: 100%;
+    height: 3px;
+    background-color: #142482;
+  }
+  .enssel-contents .enssel-page-title > h1 {
+    font-weight: 900;
+    color: #142482;
+    margin: 20px 0 20px 10px;
+  }
+  .enssel-contents .enssel-hr-line {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    margin: 5rem 0;
+  }
+  .enssel-contents .enssel-hr-line > h2 {
+    color: #142482;
+    margin: 20px 0 20px 10px;
+  }
+  .enssel-contents .enssel-hr-line > hr {
+    margin: 0.5rem 0;
+    color: inherit;
+    border: 0;
+    border-top: 3px solid #142482;
+    opacity: 1;
+  }
 }
 
 /*# sourceMappingURL=common.css.map */
