--- a/enssel/src/main/resources/static/css/common.scss
+++ b/enssel/src/main/resources/static/css/common.scss
@@ -1,29 +1,214 @@
-*{
+$EnsselColor: #142482;
+
+* {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
 
-a{
+a {
   color: black;
   text-decoration: none;
 }
-a:hover{
+
+a:hover {
   font-weight: bold;
 }
 
-h1, h2, h3, h4, h5, h6{
+h1, h2, h3, h4, h5, h6 {
   margin: 1rem 0;
   padding: 0;
   overflow: hidden;
 }
 
-.enssel-title{
+ul, li {
+  list-style-type: none;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+input, textarea {
+  outline: none;
+  resize: none;
+  border: 1px solid $EnsselColor;
+  border-radius: 5px;
+  padding: 0.2rem;
+  width: 100%;
+}
+
+input:focus, textarea:focus {
+  box-shadow: rgba(120, 150, 255, 0.7) 0px 0px 7px 3px;
+}
+
+.enssel-title {
   margin: 5rem 0;
 }
 
-ul, li{
-  list-style-type: none;
-  overflow: hidden;
+// Page Layout
+.enssel-page-layout {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  padding-top: 7vh;
+}
+
+// Page Image & Title
+.enssel-page-image {
+  width: 100%;
+  height: 100vh;
+  background-image: url('https://via.placeholder.com/1920x920/000000/111111');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0 5rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: center;
+
+  > h1 {
+    color: white;
+    font-weight: 900;
+    font-size: 3rem;
+  }
+
+  > h2 {
+    color: white;
+    font-weight: 450;
+    font-size: 1.5rem;
+  }
+}
+
+// 페이지 상세내용
+.enssel-contents {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  margin: 3rem 15rem;
+
+  .enssel-page-title {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+    > span {
+      width: 100%;
+      height: 3px;
+      background-color: $EnsselColor;
+    }
+
+    > h1 {
+      font-weight: 900;
+      color: $EnsselColor;
+      margin: 20px 0 20px 10px;
+    }
+  }
+
+  .enssel-hr-line {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    margin: 5rem 0;
+
+    > h2 {
+      color: $EnsselColor;
+      margin: 20px 0 20px 10px;
+    }
+
+    > hr {
+      margin: 0.5rem 0;
+      color: inherit;
+      border: 0;
+      border-top: 3px solid $EnsselColor;
+      opacity: 1;
+    }
+  }
+}
+
+// Max-width < 1020px
+@media (max-width: 1020px) {
+  // Page Layout
+  .enssel-page-layout {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    padding-top: 14vh;
+  }
+
+  // Page Image & Title
+  .enssel-page-image {
+    width: 100%;
+    height: 60vh;
+    background-image: url('https://via.placeholder.com/1920x920/000000/111111');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 0 3rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    justify-content: center;
+
+    > h1 {
+      color: white;
+      font-weight: 900;
+      font-size: 2.4rem;
+    }
+
+    > h2 {
+      color: white;
+      font-weight: 450;
+      font-size: 1.2rem;
+    }
+  }
+
+  // 페이지 상세내용
+  .enssel-contents {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    margin: 3rem 3rem;
+
+    .enssel-page-title {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+
+      > span {
+        width: 100%;
+        height: 3px;
+        background-color: $EnsselColor;
+      }
+
+      > h1 {
+        font-weight: 900;
+        color: $EnsselColor;
+        margin: 20px 0 20px 10px;
+      }
+    }
+
+    .enssel-hr-line {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      margin: 5rem 0;
+
+      > h2 {
+        color: $EnsselColor;
+        margin: 20px 0 20px 10px;
+      }
+
+      > hr {
+        margin: 0.5rem 0;
+        color: inherit;
+        border: 0;
+        border-top: 3px solid $EnsselColor;
+        opacity: 1;
+      }
+    }
+  }
 }
