--- a/enssel/src/main/resources/static/css/header.css
+++ b/enssel/src/main/resources/static/css/header.css
@@ -1,31 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Passion+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Passion+One&display=swap");
 header {
+  width: 100%;
   display: flex;
-  grid-template-rows: 2.5fr 7.5fr auto;
-  width: 100vw;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: flex-start;
   position: absolute;
   top: 0;
   z-index: 1000;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: flex-start;
 }
 header .enssel-header-menu-bar {
-  display: flex;
   width: 100%;
-  align-items: center;
-  padding: 0 3%;
-  background-color: white;
-  justify-content: space-between;
-  flex-direction: row;
+  display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 2rem;
+  background-color: white;
 }
 header .enssel-header-menu-bar .enssel-logo-img {
-  padding: 5px;
+  padding: 0 1rem;
   cursor: pointer;
+  text-align: center;
 }
 header .enssel-header-menu-bar .enssel-logo-img > a {
-  margin-left: 3%;
+  margin-left: 0%;
   font-family: "Passion One", sans-serif;
   font-size: 38px;
   font-weight: 400;
@@ -33,44 +34,69 @@ header .enssel-header-menu-bar .enssel-logo-img > a {
   text-shadow: 1px 1px 1px dimgrey;
 }
 header .enssel-header-menu-bar .enssel-menu-items {
+  width: 750px;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  justify-items: center;
-  flex-direction: row;
   flex-wrap: nowrap;
-  align-content: center;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
 }
 header .enssel-header-menu-bar .enssel-menu-items .enssel-menu-item {
-  margin: 0 5px;
+  width: 20%;
   cursor: pointer;
-  text-align: center;
-  align-items: center;
-  line-height: 3rem;
-  display: grid;
-  width: 100px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 header .enssel-header-menu-bar .enssel-menu-items .enssel-menu-item > span {
-  top: 0;
-  height: 2px;
-  background-color: #142482;
   width: 0%;
-  transition: all 0.3s;
+  height: 3px;
+  background-color: #142482;
+  transition: all 0.5s;
 }
-header .enssel-header-menu-bar .enssel-menu-items .enssel-menu-item > a {
-  font-weight: 900;
+header .enssel-header-menu-bar .enssel-menu-items .enssel-menu-item > h6 {
+  font-weight: bold;
+  font-size: 1.1em;
+  text-align: center;
 }
 header .enssel-header-menu-bar .enssel-menu-items .enssel-menu-item:hover > span {
   width: 100%;
 }
-header .enssel-menu-all {
+header .enssel-header-menu-detail {
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
   height: 0vh;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: rgba(26, 30, 130, 0.5);
+  padding: 0 2rem;
   transition: all 1s;
 }
+header .enssel-header-menu-detail .enssel-detail-items {
+  width: 750px;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+}
+header .enssel-header-menu-detail ul.enssel-detail-item {
+  width: 20%;
+  height: 100%;
+  text-align: center;
+}
+header .enssel-header-menu-detail ul.enssel-detail-item > li {
+  margin: 1rem 0;
+}
+header .enssel-header-menu-detail ul.enssel-detail-item > li > a {
+  font-weight: 650;
+  font-size: 0.8em;
+  color: white;
+}
 
-header:hover .enssel-menu-all {
+header:hover .enssel-header-menu-detail {
   height: 25vh;
 }
 
