--- a/enssel/src/main/resources/static/css/introduce.scss
+++ b/enssel/src/main/resources/static/css/introduce.scss
@@ -1,4 +1,58 @@
-section.enssel-introduce{
+section.enssel-introduce {
+  margin-top: 7vh;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  padding: 0 20rem;
+
+  .enssel-introduce-bar {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+
+    h1 {
+      border-top: 3px solid #142482;
+      padding: 15px 0px;
+    }
+
+    .enssel-display-items{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: space-around;
+      align-items: center;
+
+      .enssel-display-item{
+        width: 75px;
+        height: 75px;
+        border-radius: 100%;
+        background-color: #b2c8f4;
+        text-align: center;
+        margin: 10px;
+        line-height: 4.6rem;
+        font-weight: 900;
+        color: white;
+        cursor: pointer;
+      }
+    }
+  }
+
+  .enssel-contents{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+    .enssel-vision-img{
+      width: 100%;
+      margin: 3rem 0;
+
+      > img{
+        min-height: 75vh;
+        min-width: 100%;
+        width: 100%;
+      }
+    }
+  }
 }
